cmake_minimum_required(VERSION 3.0)
set(CMAKE_C_FLAGS "-g3 -std=c99")
include_directories(${CMAKE_SOURCE_DIR})
# add_subdirectory(lexer)
# add_subdirectory(parser)
# add_subdirectory(experiment)
# add_subdirectory(recursive)
add_subdirectory(utillib)
add_subdirectory(prep)
add_subdirectory(scanner)
